<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            app:cardCornerRadius="5dp"
            android:elevation="2dp"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:orientation="vertical"
                android:padding="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:gravity="center"
                    android:layout_marginTop="25dp"
                    android:text="@string/instituicao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:gravity="center"
                    android:text="@string/titulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


                <TextView
                    android:gravity="center"
                    android:text="@string/nome"
                    android:textStyle="bold"
                    android:layout_marginTop="50dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:gravity="center"
                    android:text="@string/ra"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:gravity="center"
                    android:text="@string/email"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:gravity="center"
                    android:text="@string/ano"
                    android:layout_marginTop="50dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </ScrollView>
</LinearLayout>